[package]
name = "allocator"
version = "0.1.0"
authors = ["tensor-programming <tensordeveloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysconf = "0.3"
winapi = "0.2"
kernel32-sys = "0.2"
libc = { version = "0.2", default-features = false }