[package]
name = "allocator"
version = "0.1.0"
authors = ["tensor-programming <tensordeveloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysconf = "0.3"
winapi = { version = "0.3", features = [ "memoryapi", "sysinfoapi", "winnt" ]}
getrandom = "0.1"


[dev-dependencies]
quickcheck = "1"
libc = "0.2"